<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Uistelu</string>
    <string name="app_title">Uistelupäiväkirja Android</string>
    <string name="begin_trip">Aloita reissu</string>
    <string name="trip">Reissu</string>
    <string name="fish">Kalatapahtuma</string>
    <string name="weather">Säähavainto</string>
    <string name="poi">Point of Interest</string>
    <string name="fishnweather">Kalatapahtuma ja säätapahtuma</string>
    <string name="new_fish">Lisää kala</string>
    <string name="new_weather">Lisää säätila</string>
    <string name="new_fishnweather">Lisää kala+sää</string>
    <string name="new_poi">Lisää POI</string>
    <string name="new_value">Lisää</string>
    <string name="end_trip">Päätä reissu</string>
    <string name="species">Laji</string>
    <string name="method">Tapa</string>
    <string name="getter">Saaja</string>
    <string name="timeandplace">Aika ja\npaikka</string>
    <string name="time">Aika</string>
    <string name="coordinates">Sijainti</string>
    <string name="add_new">Lisää</string>
    <string name="done">Valmis</string>
    <string name="delete">Poista</string>
    <string name="cancel">Peru</string>
    <string name="group">Joukko</string>
    <string name="lure">Viehe</string>
    <string name="catchnrelease">C&amp;R</string>
    <string name="undersize">Alamittainen</string>
    <string name="weight">Paino</string>
    <string name="length">Pituus</string>
    <string name="spot_depth">Ottisyvyys</string>
    <string name="depth">Syvyys</string>
    <string name="trolling_speed">Vetonopeus</string>
    <string name="lure_weight">Painotus</string>
    <string name="release_width">Vap. pituus</string>
    <string name="air_temp">Ilma</string>
    <string name="water_temp">Vesi</string>
    <string name="wind_speed">Tuuli</string>
    <string name="direction">Suunta</string>
    <string name="clouds">Pilvet</string>
    <string name="rain">Sade</string>
    <string name="pressure">Paine</string>
    <string name="change">Muutos</string>
    <string name="pcs">kpl</string>
    <string name="metres">m</string>
    <string name="grams">g</string>
    <string name="kmh">km/h</string>
    <string name="cents">cm</string>
    <string name="celsius">C</string>
    <string name="ms">m/s</string>
    <string name="hpa">hPa</string>
    <string name="autofetch">Hae automaattisesti</string>
    <string name="yes">Kyllä</string>
    <string name="no">Ei</string>
    <string name="opentrip">Avataanko reissu?</string>
    <string name="exception">Tuli ongelma. Tekninen kuvaus: </string>
    <string name="confirmation">Oletko nyt varma?</string>
    <string name="banner">Uistelupäiväkirja Android 2011/05</string>
    <string name="sync_help">Suorita synkkaus PC:n Uistelupäiväkirjan kanssa tässä näkymässä. Jos suoritat synkkauksen jonkin tapahtuman ollessa auki, saatat menettää tallentamattomat muutokset.</string>
    <string name="sync_trips">Synkronoi palvelimeen</string>
    <string name="uploading">Lähetetään reissut...</string>
    <string name="unfinished_trips">Sinulla on sulkemattomia reissuja. Synkronoi vasta kun olet päättänyt reissun.</string>
    <string name="service_addr">Palvelun osoite</string>
    <string name="service_user">Käyttäjätunnus</string>
    <string name="service_pass">Salasana</string>
    <string name="settings">Palveluasetukset</string>
</resources>
