<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical" 
	android:layout_height="fill_parent" 
	android:id="@+id/LinearLayout01" 
	android:layout_width="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

<TableLayout 
	android:id="@+id/TableLayout01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:stretchColumns="1">
	
<TableRow>
<TextView android:text="@string/timeandplace" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<TextView android:text="" android:id="@+id/TimeAndCoordinates" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>
	
<TableRow>
<TextView android:text="@string/depth" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/Depth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numeric="decimal"></EditText>
<TextView android:text="@string/metres" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>

<TableRow>
<TextView android:text="@string/trolling_speed" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/TrollingSpeed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numeric="decimal"></EditText>
<TextView android:text="@string/kmh" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>

<TableRow>
<TextView android:text="@string/lure_weight" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/LureWeight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numeric="decimal"></EditText>
<TextView android:text="@string/grams" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>

<TableRow>
<TextView android:text="@string/release_width" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/ReleaseWidth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numeric="decimal"></EditText>
<TextView android:text="@string/metres" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>
</TableLayout>

</LinearLayout>
