<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">

	<TextView android:text="@string/service_addr" 
		android:id="@+id/TextView01" android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
		
	<EditText android:text="" android:id="@+id/ServiceAddr" 
		android:layout_height="wrap_content" android:singleLine="false" android:layout_width="fill_parent">
	</EditText>
	
	<TextView android:text="@string/service_user" 
		android:id="@+id/TextView02" android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	</TextView>
		
	<EditText android:text="" android:id="@+id/ServiceUser" 
		android:layout_width="fill_parent" android:layout_height="wrap_content">
	</EditText>
	
	<TextView android:text="@string/service_pass" 
		android:id="@+id/TextView03" android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
		
	<EditText android:text="" android:id="@+id/ServicePass" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true">
	</EditText>

</LinearLayout>
